<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="@dimen/padding"
        android:text="@string/result"
        android:textStyle="bold"
        android:textSize="@dimen/heading" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding"
        android:text="@string/correctAnswers" />

    <LinearLayout
        android:id="@+id/SeekBarLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ProgressBar
            android:id="@+id/progressBar1"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding"
        android:text="@string/comments" />

    <RelativeLayout
        android:id="@+id/ButtonLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding" >

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:minHeight="55dp"
            android:minWidth="150dp"
            android:padding="@dimen/padding"
            android:text="@string/quit" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:gravity="center_vertical|center_horizontal"
            android:minHeight="55dp"
            android:minWidth="150dp"
            android:padding="@dimen/padding"
            android:text="@string/tryAgain" />

    </RelativeLayout>

</LinearLayout>
